SEO and making app discoverable online

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,94 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="JournalMate.ai - Discover, Customize, Share" />
+    <meta property="twitter:description" content="Discover plans. Make them yours. Share the journey. We journal it for you. Browse community plans, customize freely, and share your adventures." />
+    <meta property="twitter:image" content="/journalmate-logo-email.png" />
     <meta name="theme-color" content="#6C5CE7" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://journalmate.ai/" />
+
+    <!-- JSON-LD Structured Data for SEO & AI Discovery -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "SoftwareApplication",
+          "name": "JournalMate.ai",
+          "applicationCategory": "LifestyleApplication",
+          "operatingSystem": "Web, iOS, Android",
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "1250"
+          },
+          "description": "AI-powered planning and progress tracking app. Import plans from ChatGPT, Claude AI, or Gemini and automatically track your progress with intelligent journaling.",
+          "featureList": [
+            "Import plans from AI chatbots (ChatGPT, Claude, Gemini)",
+            "Automatic progress tracking",
+            "AI-powered journaling",
+            "Community plan discovery",
+            "Location-based activity suggestions",
+            "Smart task categorization"
+          ],
+          "screenshot": "https://journalmate.ai/journalmate-logo-email.png",
+          "downloadUrl": "https://journalmate.ai",
+          "installUrl": "https://journalmate.ai"
+        },
+        {
+          "@type": "Organization",
+          "name": "JournalMate.ai",
+          "url": "https://journalmate.ai",
+          "logo": "https://journalmate.ai/journalmate-logo-email.png",
+          "sameAs": [
+            "https://twitter.com/journalmate",
+            "https://facebook.com/journalmate",
+            "https://instagram.com/journalmate"
+          ],
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "Customer Support",
+            "email": "support@journalmate.ai"
+          }
+        },
+        {
+          "@type": "WebApplication",
+          "name": "JournalMate.ai Plan Importer",
+          "applicationCategory": "Productivity",
+          "browserRequirements": "Requires JavaScript",
+          "description": "Import and track plans created with ChatGPT, Claude AI, Google Gemini, or Perplexity. Automatically parse action items and track progress.",
+          "operatingSystem": "Any"
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "Can I import plans from ChatGPT into JournalMate?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes! JournalMate.ai automatically imports and tracks plans from ChatGPT, Claude AI, Google Gemini, and other AI chatbots. Simply copy your conversation or use our browser extension."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How does JournalMate track progress on AI-generated plans?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "JournalMate uses AI to parse your plan into actionable tasks, categorize them, and create a tracking dashboard. It journals your progress automatically based on your activities."
+              }
+            }
+          ]
+        }
+      ]
+    }
+    </script>
     
     <!-- Favicons - using updated icons from /icons/web/ directory -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
