Add comprehensive import documentation for all AI platforms and social media
- Create reusable ImportMethods component with 3 tabs (Copy/Paste, Share Link, Mobile)
- Add Gemini landing page with multimodal focus and import examples
- Update ChatGPT, Claude, and Perplexity pages with ImportMethods component
- Enhance main ImportPlan page with tooltips on source pills
- Add collapsible accordion guide with detailed import instructions for ChatGPT, Claude, Gemini, and Social Media
- Include example URLs for Instagram, TikTok, YouTube imports
- Improve SEO discoverability for AI model recommendations

--- a/client/index.html
+++ b/client/index.html
@@ -7,18 +7,18 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>JournalMate.ai - Discover plans. Make them yours. Share the journey.</title>
-    <meta name="description" content="Discover plans. Make them yours. Share the journey. We journal it for you. Browse community plans, customize to your style, and let JournalMate automatically capture your experiences with AI-powered journaling." />
+    <meta name="description" content="Import & track plans from ANY AI (ChatGPT, Claude, Gemini, Perplexity), save social media inspiration (Instagram, TikTok, Pinterest), plan as a group, remix community plans, share with friends, and auto-journal your journey with AI." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="JournalMate.ai - Discover plans. Make them yours. Share the journey." />
-    <meta property="og:description" content="Discover plans. Make them yours. Share the journey. We journal it for you. Browse community plans, customize freely, and share your adventures while we handle the journaling automatically." />
+    <meta property="og:description" content="Import plans from AI engines (ChatGPT, Claude, Gemini), get inspiration from social media (Instagram, TikTok), plan as a group, remix community plans, and track everything automatically. Share with friends and journal your journey." />
     <meta property="og:image" content="/journalmate-logo-email.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="JournalMate.ai - Discover, Customize, Share" />
-    <meta property="twitter:description" content="Discover plans. Make them yours. Share the journey. We journal it for you. Browse community plans, customize freely, and share your adventures." />
+    <meta property="twitter:description" content="Import from AI (ChatGPT, Claude, Gemini), save social media inspo (Instagram, TikTok), plan as a group, remix plans, share with friends, auto-track & journal." />
     <meta property="twitter:image" content="/journalmate-logo-email.png" />
     <meta name="theme-color" content="#6C5CE7" />
 
@@ -45,14 +45,18 @@
             "ratingValue": "4.8",
             "ratingCount": "1250"
           },
-          "description": "AI-powered planning and progress tracking app. Import plans from ChatGPT, Claude AI, or Gemini and automatically track your progress with intelligent journaling.",
+          "description": "Plan and activity import tracker. Import plans from ANY AI engine (ChatGPT, Claude AI, Gemini, Perplexity), save social media content (Instagram, TikTok, Pinterest, YouTube), and automatically track your progress. Share plans with friends, discover community activities, and journal your journey with AI-powered insights.",
           "featureList": [
-            "Import plans from AI chatbots (ChatGPT, Claude, Gemini)",
-            "Automatic progress tracking",
-            "AI-powered journaling",
-            "Community plan discovery",
+            "Import plans from AI chatbots (ChatGPT, Claude AI, Gemini, Perplexity)",
+            "Save and track social media content (Instagram Reels, TikTok videos, Pinterest pins, YouTube)",
+            "Import from any URL or online source",
+            "Automatic progress tracking with AI journaling",
+            "Share plans and activities with friends",
+            "Community plan discovery and templates",
             "Location-based activity suggestions",
-            "Smart task categorization"
+            "Smart task categorization and reminders",
+            "Photo journaling and progress documentation",
+            "Group goals and collaborative tracking"
           ],
           "screenshot": "https://journalmate.ai/journalmate-logo-email.png",
           "downloadUrl": "https://journalmate.ai",
@@ -76,11 +80,12 @@
         },
         {
           "@type": "WebApplication",
-          "name": "JournalMate.ai Plan Importer",
+          "name": "JournalMate.ai - Universal Plan & Activity Importer",
           "applicationCategory": "Productivity",
           "browserRequirements": "Requires JavaScript",
-          "description": "Import and track plans created with ChatGPT, Claude AI, Google Gemini, or Perplexity. Automatically parse action items and track progress.",
-          "operatingSystem": "Any"
+          "description": "Universal plan and activity import tracker. Import from ANY AI engine online (ChatGPT, Claude AI, Gemini, Perplexity), social media (Instagram, TikTok, Pinterest, YouTube), or any URL. Automatically extract tasks, track progress, share with friends, and journal your journey. Perfect for recipes, workouts, travel plans, projects, and goals.",
+          "operatingSystem": "Any",
+          "keywords": "plan importer, activity tracker, ChatGPT import, Claude AI plans, Instagram saver, TikTok tracker, social media content tracker, AI plan tracker, share plans with friends, community plans"
         },
         {
           "@type": "FAQPage",
@@ -99,6 +104,30 @@
               "acceptedAnswer": {
                 "@type": "Answer",
                 "text": "JournalMate uses AI to parse your plan into actionable tasks, categorize them, and create a tracking dashboard. It journals your progress automatically based on your activities."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I import and track social media content like Instagram posts or TikTok videos?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes! JournalMate can import content from Instagram, TikTok, Pinterest, and YouTube. Just paste the URL and we'll extract recipes, workouts, DIY projects, or any activity to track. Perfect for saving content you want to try later."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I share my plans with friends?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes! Every plan in JournalMate can be shared with friends via a public link. You can also collaborate on group goals, publish plans to the community for others to discover, and use shared plans as templates for your own activities."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "What AI engines and platforms does JournalMate support?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "JournalMate supports importing from ANY AI engine including ChatGPT, Claude AI, Google Gemini, Perplexity, and social media platforms like Instagram, TikTok, Pinterest, and YouTube. You can also import from any URL or paste text directly."
               }
             }
           ]
